# cartoon2d

./: .dockerignore  .gitignore  ADK_GEMINI_LIVE_NOTES.md  AGENTS.md  Dockerfile  LICENSE  NO_TOUCH_BASELINE.md  PROJECT.md  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  test-gemini-interleaved.ts  test-gemini.ts  test-output.json  test-schema.json  test-stream-minimal.ts  test-stream-safe.ts  test-stream.ts
app/: main.py  main_cartoon_director_v1.py
app/cartoon_director_v1/: __init__.py  agent.py  runtime.py  store.py  tools.py
app/static/: index.html
app/static_cartoon_v1/: index.html
app/static_cartoon_v1/css/: style.css
app/static_cartoon_v1/js/: app.js
docs/: devpost-architecture-notes.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: draftsman.ts  export.ts  scene.ts  set_designer.ts  sfx.ts  tts.ts
src/components/: IKInspector.tsx  IKLab.tsx  IKSourceEditor.tsx  IKStage.tsx  IKToolbar.tsx  PropertiesPanel.tsx  RigClipPreview.tsx  RigViewer.tsx  SetLab.tsx  Stage.tsx  ThemeToggle.tsx  TimelinePanel.tsx
src/hooks/: useTimelineDrag.ts
src/hooks/__tests__/: useTimelineDrag.test.ts
src/lib/: voices.ts
src/lib/ai/: director.ts  retry.ts
src/lib/ik/: analyze.ts  constraints.ts  goal_solver.ts  graph.ts  physics.ts  playback.ts  pose.ts  solver.ts  svgPose.ts  view_ids.ts
src/lib/motion/: affordance.ts  ambient.ts  collision.ts  compiled_ik.ts  compiler.ts  core.ts  intent.ts  semantics.ts  spec.ts  topology.ts  validation.ts
src/lib/rig/: templates.ts
tests/: test_bidi_demo.md
(+14 files in other folders)
